@@ -26,6 +26,10 @@ The Grinder 3.7 (not yet released)
    Tentative fix for bug 3459637 - AWT-EventQueue
    NullPointerException. Thanks to Richard Lynch for the report.
 
+   Fix bug 3464547 - DCR instrumentation of unbound PyMethods doesn't work.
+
+   DCR instrumentation of bound PyMethods now fails hard (see bug 3464533).
+
 
 The Grinder 3.6
 ---------------
